Tests/CompilerTests/negative/missing-yield-value.hylo
//! no-std

subscript foo() -> Void {
  yield
}
