Tests/CompilerTests/negative/missing-yield-value.diagnostics.expected
negative/missing-yield-value.hylo:4.8: error: expected expression
  yield
       ^
